--- a/Baccarat/App.config
+++ b/Baccarat/App.config
@@ -8,10 +8,9 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7" />
   </startup>
   <connectionStrings>
-    <add name="BaccaratEntities" connectionString="data source=.\SQLEXPRESS;initial catalog=Baccarat;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.EntityClient" />
+    <add name="dbContext" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=Baccarat;Integrated Security=True;MultipleActiveResultSets=True;" providerName="System.Data.SqlClient" />
   </connectionStrings>
-  <entityFramework>
-    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
+  <entityFramework>    
     <providers>
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
