--- a/Baccarat/Baccarat.csproj
+++ b/Baccarat/Baccarat.csproj
@@ -88,21 +88,7 @@
     <Compile Include="frmMain.Designer.cs">
       <DependentUpon>frmMain.cs</DependentUpon>
     </Compile>
-    <Compile Include="Model1.Context.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Model1.Context.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Model1.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Model1.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Model1.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Model1.edmx</DependentUpon>
-    </Compile>
+    <Compile Include="DBContext\BaccaratDBContext.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
@@ -110,15 +96,18 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <Compile Include="Result.cs">
-      <DependentUpon>Model1.tt</DependentUpon>
+    <Compile Include="DBContext\Result.cs" />
+    <Compile Include="DBContext\Session.cs" />
+    <Compile Include="DBContext\SetConnection.cs">
+      <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Session.cs">
-      <DependentUpon>Model1.tt</DependentUpon>
+    <Compile Include="DBContext\SetConnection.Designer.cs">
+      <DependentUpon>SetConnection.cs</DependentUpon>
     </Compile>
     <Compile Include="Utils\DatabaseUtil.cs" />
     <Compile Include="Utils\Generate4ThreadLogs.cs" />
     <Compile Include="Utils\SlackWebhookSender.cs" />
+    <Compile Include="Utils\StartApp.cs" />
     <Compile Include="VietnameseLottery.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -151,19 +140,15 @@
       <SubType>Designer</SubType>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <EmbeddedResource Include="DBContext\SetConnection.resx">
+      <DependentUpon>SetConnection.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="VietnameseLottery.resx">
       <DependentUpon>VietnameseLottery.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Utils\UtilCal.resx">
       <DependentUpon>UtilCal.cs</DependentUpon>
     </EmbeddedResource>
-    <EntityDeploy Include="Model1.edmx">
-      <Generator>EntityModelCodeGenerator</Generator>
-      <LastGenOutput>Model1.Designer.cs</LastGenOutput>
-    </EntityDeploy>
-    <None Include="Model1.edmx.diagram">
-      <DependentUpon>Model1.edmx</DependentUpon>
-    </None>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -239,21 +224,12 @@
     <Content Include="Cards\9S.jpg" />
     <Content Include="Cards\CardBackBlue.jpg" />
     <Content Include="Cards\CardBackRed.jpg" />
-    <Content Include="Model1.Context.tt">
-      <Generator>TextTemplatingFileGenerator</Generator>
-      <LastGenOutput>Model1.Context.cs</LastGenOutput>
-      <DependentUpon>Model1.edmx</DependentUpon>
-    </Content>
-    <Content Include="Model1.tt">
-      <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>Model1.edmx</DependentUpon>
-      <LastGenOutput>Model1.cs</LastGenOutput>
-    </Content>
     <None Include="Resources\160041651.jpg" />
     <None Include="Resources\download.png" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
