--- a/Baccarat/Baccarat.csproj
+++ b/Baccarat/Baccarat.csproj
@@ -224,6 +224,12 @@
     <Content Include="Cards\9S.jpg" />
     <Content Include="Cards\CardBackBlue.jpg" />
     <Content Include="Cards\CardBackRed.jpg" />
+    <Content Include="Sound\Banker.wav">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Sound\Player.wav">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <None Include="Resources\camera-icon-png.png" />
     <None Include="Resources\160041651.jpg" />
     <None Include="Resources\download.png" />
