--- a/Baccarat/Baccarat.csproj
+++ b/Baccarat/Baccarat.csproj
@@ -56,8 +56,20 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
+    <Reference Include="WebDriver, Version=4.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Selenium.WebDriver.4.1.0\lib\net47\WebDriver.dll</HintPath>
+    </Reference>
+    <Reference Include="WebDriver.Support, Version=4.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Selenium.Support.4.1.0\lib\net47\WebDriver.Support.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AutoLogin.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AutoLogin.Designer.cs">
+      <DependentUpon>AutoLogin.cs</DependentUpon>
+    </Compile>
     <Compile Include="BaccaratSimulatorUI\BacSimulator.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -120,6 +132,9 @@
     <Compile Include="Utils\UtilCal.Designer.cs">
       <DependentUpon>UtilCal.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="AutoLogin.resx">
+      <DependentUpon>AutoLogin.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="BaccaratSimulatorUI\BacSimulator.resx">
       <DependentUpon>BacSimulator.cs</DependentUpon>
     </EmbeddedResource>
