--- a/Baccarat/packages.config
+++ b/Baccarat/packages.config
@@ -2,4 +2,6 @@
 <packages>
   <package id="EntityFramework" version="6.2.0" targetFramework="net47" />
   <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net47" />
+  <package id="Selenium.Support" version="4.1.0" targetFramework="net47" />
+  <package id="Selenium.WebDriver" version="4.1.0" targetFramework="net47" />
 </packages>
