--- a/Baccarat/Baccarat.csproj
+++ b/Baccarat/Baccarat.csproj
@@ -100,13 +100,19 @@
     <Compile Include="Baccarat\BaccaratRootAlg.Designer.cs">
       <DependentUpon>BaccaratRootAlg.cs</DependentUpon>
     </Compile>
+    <Compile Include="Configuration\SetMoneyCoeff.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Configuration\SetMoneyCoeff.Designer.cs">
+      <DependentUpon>SetMoneyCoeff.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmMain.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="frmMain.Designer.cs">
       <DependentUpon>frmMain.cs</DependentUpon>
     </Compile>
-    <Compile Include="DBContext\BaccaratDBContext.cs" />
+    <Compile Include="Configuration\BaccaratDBContext.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
@@ -114,10 +120,10 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <Compile Include="DBContext\SetConnection.cs">
+    <Compile Include="Configuration\SetConnection.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="DBContext\SetConnection.Designer.cs">
+    <Compile Include="Configuration\SetConnection.Designer.cs">
       <DependentUpon>SetConnection.cs</DependentUpon>
     </Compile>
     <Compile Include="Utils\DatabaseUtil.cs" />
@@ -154,6 +160,9 @@
     <EmbeddedResource Include="Baccarat\BaccaratRootAlg.resx">
       <DependentUpon>BaccaratRootAlg.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Configuration\SetMoneyCoeff.resx">
+      <DependentUpon>SetMoneyCoeff.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmMain.resx">
       <DependentUpon>frmMain.cs</DependentUpon>
     </EmbeddedResource>
@@ -162,7 +171,7 @@
       <SubType>Designer</SubType>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <EmbeddedResource Include="DBContext\SetConnection.resx">
+    <EmbeddedResource Include="Configuration\SetConnection.resx">
       <DependentUpon>SetConnection.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="VietnameseLottery.resx">
