--- a/DatabaseContext/DatabaseContext.csproj
+++ b/DatabaseContext/DatabaseContext.csproj
@@ -52,6 +52,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Result.cs" />
     <Compile Include="Root.cs" />
+    <Compile Include="RootSession.cs" />
     <Compile Include="Session.cs" />
   </ItemGroup>
   <ItemGroup>
