--- a/CoreLogic/CoreLogic.csproj
+++ b/CoreLogic/CoreLogic.csproj
@@ -62,8 +62,11 @@
     <Compile Include="Models\BaccaratResult.cs" />
     <Compile Include="Models\BaccratCard.cs" />
     <Compile Include="Models\CalculatorItem.cs" />
+    <Compile Include="AccumulateProfit.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="BacSeparatedAlgorithms\QuadrupleResult.cs" />
+    <Compile Include="StandardlizedAlgorithms\IAutoBacAlgorithm.cs" />
+    <Compile Include="StandardlizedAlgorithms\AutoBacRootAlgorithm.cs" />
     <Compile Include="VietnameseLottery.cs" />
     <Compile Include="VietnameseNumberMarket\VietnameseLottery.cs" />
   </ItemGroup>
@@ -77,8 +80,6 @@
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="StandardlizedAlgorithms\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
