--- a/DatabaseContext/DatabaseContext.csproj
+++ b/DatabaseContext/DatabaseContext.csproj
@@ -50,9 +50,12 @@
   <ItemGroup>
     <Compile Include="BaccaratDBContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="AutoResult.cs" />
     <Compile Include="Result.cs" />
+    <Compile Include="AutoRoot.cs" />
     <Compile Include="Root.cs" />
     <Compile Include="RootSession.cs" />
+    <Compile Include="AutoSession.cs" />
     <Compile Include="Session.cs" />
   </ItemGroup>
   <ItemGroup>
