--- a/Baccarat/Baccarat.csproj
+++ b/Baccarat/Baccarat.csproj
@@ -279,6 +279,7 @@
     <Content Include="Sound\Windows Logon.wav">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="SQL\New database.sql" />
     <Content Include="SQL\Run 2020.02.14.sql" />
     <None Include="Resources\camera-icon-png.png" />
     <None Include="Resources\160041651.jpg" />
